<resources>
    <string name="app_name">RxTracker</string>
    <string name="error_msg_internet">Internet is not connected</string>
    <string name="retry">RETRY</string>
    <string name="view">View</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_suggestion">No suggestion</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_in_to_your_existing_account">Log into your existing account</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile_no"> Mobile Number</string>
    <string name="mobile_no_">Mobile Number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="error_empty_field">This field must be filled.</string>
    <string name="error_password_field">Password must be greater than 3 characters</string>
    <string name="error_repeat_password_field">Password and repeat password should be same.</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="tb_form">TB Notification Form</string>
    <string name="forms">Forms</string>
    <string name="setting">Settings</string>
    <string name="product_ledger">Product Ledger</string>
    <string name="sale_purchase"><![CDATA[Sale & Purchase]]></string>
    <string name="stock_position">ATT Stock</string>
    <string name="reports">Reports</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="today_sale_units">Today Sale Units</string>
    <string name="month_sale_units">Month Sale Units</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="patient_details">Patient Details:</string>
    <string name="name">Name</string>
    <string name="sameel_sethi">Sameel Sethi</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="i_e_20">I.E: 20</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="jhumra_faisalabad">Jhumra, Faisalabad</string>
    <string name="locality_distric">Locality/Distric</string>
    <string name="cnic_number">CNIC Number</string>
    <string name="xxxxxxxxxxxxx">xxxxxxxxxxxxx</string>
    <string name="prescription_details">Prescription Details:</string>
    <string name="medication_details">Medication Details:</string>
    <string name="add_product">Add Product</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="licence_number">License Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="oops">Oops!</string>
    <string name="tb_notification_form">TB Notification Form</string>
    <string name="numer_prefix">+92 3</string>
    <string name="search">Search</string>
    <string name="patient_search">Patient Search</string>
    <string name="john_wick">John Wick</string>
    <string name="error_name_msg">Patient name should be greater than 3 characters</string>
    <string name="error_age_msg">Age must be greater than 0 year</string>
    <string name="error_gender">Please select gender first</string>
    <string name="error_cnic">CNIC number length should be equal to 13 digits</string>
    <string name="an_error_occurred_image">An error occurred</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="description">Description</string>
    <string name="choose_an_item">Choose An Item</string>
    <string name="distric">District</string>
    <string name="locality">Tehsil</string>
    <string name="error_district_first">Please select district first</string>
    <string name="name_1_s">Name: %1$s</string>
    <string name="id_1_s">Id: %1$s</string>
    <string name="gender_1_s">Gender: %1$s</string>
    <string name="error_mobile_msg">Mobile number format is incorrect</string>
    <string name="title_search">Patient Search</string>
    <string name="select_product">Select product</string>
    <string name="qty">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="cd_delete_product">Delete Product</string>
    <string name="error_product_sync">Products are not found, please sync them before.</string>
    <string name="error_picture">Please select prescription picture first</string>
    <string name="error_transaction">Please add a product!</string>
    <string name="login_title">Login</string>
    <string name="proceed">Proceed</string>
    <string name="search_patient_first">Please  search patient first</string>
    <string name="cnic">CNIC</string>
    <string name="no_patient_found_against_above_mobile_number_if_you_want_to_add_new_patient_click_on_procced_button">No patient found against above mobile number. If you want to add new patient click on proceed button.</string>
    <string name="sync">Sync</string>
    <string name="sync_inpprogress">Sync in progress</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="current_password">Current Password</string>
    <string name="p_provincial_span_style_color_ff0000_tb_span_control_span_style_color_339966_program_span_punjab_p"><![CDATA[<p>Provincial <span style=\'color: #FF0000;\'>TB</span> Control <span style=\'color: #339966;\'>Program</span>, Punjab</p>]]></string>
    <string name="provincial">Provincial</string>
    <string name="tb">TB</string>
    <string name="control">Control</string>
    <string name="program">Program</string>
    <string name="_punjab">, Punjab</string>
    <string name="_92_800_55511">+92 800 55511</string>
    <string name="mobile_application_to_notify_tb_cases">Mobile Application To Notify TB Cases</string>
    <string name="upload_prescription_image_here">Upload Prescription image here</string>
    <string name="notifcations">Notifcations</string>
    <string name="permission_title">Storage Permission</string>
    <string name="write_permission_request">Please allow permission to app to save images to phone</string>

</resources>