<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".ui.SplashActivity">

    <include
        android:id="@+id/include"
        layout="@layout/content_appbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_logo_tb_m" />

        <com.tharsol.endtb.ui.widget.RoundedFieldView
            android:id="@+id/editTextCurrentPassword"
            style="@style/RoundedInputFieldStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_size_16dp"
            android:layout_marginEnd="@dimen/dimen_size_16dp"
            android:layout_marginTop="@dimen/dimen_size_32dp"
            android:hint="@string/current_password"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_icon"
            android:maxLength="@integer/length_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:editId="@+id/input_password"/>

        <com.tharsol.endtb.ui.widget.RoundedFieldView
            android:id="@+id/editTextPassword"
            style="@style/RoundedInputFieldStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_size_16dp"
            android:layout_marginEnd="@dimen/dimen_size_16dp"
            android:hint="@string/new_password"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_icon"
            android:maxLength="@integer/length_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:editId="@+id/input_password"/>

        <com.tharsol.endtb.ui.widget.RoundedFieldView
            android:id="@+id/editTextRepeatPassword"
            style="@style/RoundedInputFieldStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_size_16dp"
            android:layout_marginEnd="@dimen/dimen_size_16dp"
            android:hint="@string/repeat_password"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_icon"
            android:maxLength="@integer/length_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:editId="@+id/input_password"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGo"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_size_16dp"
            android:layout_marginTop="@dimen/dimen_size_16dp"
            android:layout_marginEnd="@dimen/dimen_size_16dp"
            android:textSize="@dimen/text_size_16sp"
            android:text="@string/submit" />


    </LinearLayout>
</LinearLayout>